[project]
name = "core-lib"
version = "0.1.0"
description = "Eye Detection and Analysis System using MediaPipe for face detection, eye openness analysis, face orientation estimation, and sunglasses detection"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0"
]
